--- a/css/contact.css
+++ b/css/contact.css
@@ -70,8 +70,14 @@ label {
     font-size: 1.25rem;
 }
 
-select:hover {
+select:hover, input[type="date"]:hover {
     cursor: pointer;
+}
+
+input, textarea, select {
+    background-color: rgba(41, 41, 41, 0.9);
+    color: var(--silver-white);
+    padding: 10px 10px;
 }
 
 .model-container,
@@ -104,7 +110,8 @@ select:hover {
 
 .model-selection-container div:nth-child(2),
 .customer-name div:nth-child(2),
-.customer-contact div:nth-child(2){
+.customer-contact div:nth-child(2)
+{
     margin-left: 5vw;
 }
 
@@ -125,4 +132,59 @@ select:hover {
 .interface-container div input:hover{
     cursor: pointer;
     color: var(--gold);
+}
+
+.date-container,
+.query-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.query-container {
+    margin-top: 20px;
+}
+
+.date-container input {
+    width: 200px;
+}
+
+.date-container input,
+.query-container textarea {
+    margin-top: 20px;
+}
+
+.submit-button {
+    width: 200px;
+    padding: 15px;
+    
+    background-color: rgba(41, 41, 41, 0.9);
+    border: 2px solid var(--gold);
+    color: var(--gold);
+    font-size: 1rem;
+
+    transition: all 0.25s ease-in-out;
+}
+
+.submit-button:hover {
+    transform: scale(0.9);
+    background-color: white;
+    color: var(--primary);
+    cursor: pointer;
+}
+
+.reset-button {
+    width: 200px;
+    padding: 15px;
+    border: 2px solid maroon;
+    background: none;
+    color: white;
+    margin-left: 20px;
+    transition: all 0.25s ease-in-out;
+}
+
+.reset-button:hover {
+    cursor: pointer;
+    transform: scale(0.9);
+    color: red;
+    border-color: red;
 }
