--- a/css/theme.css
+++ b/css/theme.css
@@ -1,5 +1,6 @@
 :root {
     /* THEMES - COLOR */
+    --background: #111111;
     --primary: #0E0E0E;
     --gold: #FF9900;
     --silver-white: #C6C6C6;
