--- a/css/commonComponents.css
+++ b/css/commonComponents.css
@@ -13,6 +13,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.page-height {
   height: 90vh;
 }
 
@@ -31,6 +34,10 @@
 @media only screen and (min-width: 1200px) {
   .vfry-title {
     font-size: 4vw;
+  }
+
+  .medium-font {
+      font-size: 2vw;
   }
 
   .full-page-information .title {
@@ -52,9 +59,19 @@
     font-size: 1rem;
   }
 
-  .full-page-information {
+  .page-height {
     height: 100%;
     margin-bottom: 100px;
+  }
+
+  .medium-font {
+    font-size: 2.25rem;
+  }
+
+  .small-font {
+    font-size: 1rem;
+    display: block;
+    text-align: center;
   }
 }
 
@@ -73,10 +90,20 @@
     font-size: 1rem;
   }
 
-  .full-page-information {
+  .page-height {
     height: 100%;
     margin-bottom: 100px;
   }
+  .medium-font {
+    font-size: 2.25rem;
+}
+
+.small-font {
+    font-size: 1rem;
+    display: block;
+    text-align: center;
+}
+  
 }
 
 /* --------- Media Query for Mobile Devices ---------------- */
@@ -95,10 +122,20 @@
     text-align: justify;
   }
 
-  .full-page-information {
+  .page-height {
     height: 100%;
     margin: 10vh 0;
   }
+
+.medium-font {
+  font-size: 1.25rem;
+}
+
+.small-font {
+  font-size: 0.7rem;
+  display: block;
+  text-align: center;
+}
 }
 
 /* -------- Animation ----------- */
