--- a/css/training.css
+++ b/css/training.css
@@ -1,4 +1,5 @@
 @import url('./theme.css');
+@import url('./commonComponents.css');
 
 .table-container {
     margin-top: 2vw;
@@ -7,6 +8,7 @@
 .video-banner {
     width: 100vw;
     height: 100vh;
+    max-width:100%;
     box-sizing: border-box;
     position: relative;
 }
@@ -25,5 +27,6 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
     background-color: rgba(0,0,0,0.7);
 }
