--- a/css/media.css
+++ b/css/media.css
@@ -61,3 +61,36 @@
 .video-gallery {
     margin-bottom: 5rem;
 }
+
+
+/* --------- Media Query for Tablets --------------- */
+@media only screen and (min-width: 761px) and (max-width: 1200px) {
+    .medium-font {
+        font-size: 2.25rem;
+    }
+
+ 
+}
+
+/* --------- Media Query for large Mobiles --------------- */
+@media only screen and (min-width: 600px) and (max-width: 760px) {
+    .medium-font {
+        font-size: 2.25rem;
+    }
+    .full-page-information .title {
+        font-size: 3rem;
+    }
+
+}
+
+/* --------- Media Query for Mobile Devices ---------------- */
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+    .customer-card {
+        padding: 0px;
+        margin: 20px;
+    }
+    .medium-font {
+        font-size: 1.25rem;
+    }
+
+}
