--- a/css/specials.css
+++ b/css/specials.css
@@ -6,7 +6,7 @@
 }
 
 .specials-banner {
-    object-fit:cover;
+    object-fit: cover;
     width: 100%;
 }
 
@@ -28,7 +28,8 @@
     background-color: #FF9900;
 }
 
-.weekly-product, .weekly-sales {
+.weekly-product,
+.weekly-sales {
     margin: 2% 0;
     display: flex;
     flex-direction: column;
@@ -52,7 +53,8 @@
     height: 100%;
 }
 
-.image-background, .description-container {
+.image-background,
+.description-container {
     position: absolute;
     width: 100%;
 }
@@ -76,9 +78,10 @@
     margin-left: 10px;
 }
 
-.weekly-product-container:hover{
+.weekly-product-container:hover {
     cursor: pointer;
 }
+
 .weekly-sales-container {
     margin: 6vh 0;
     display: flex;
@@ -119,12 +122,114 @@
     line-height: 1.563vw;
 }
 
-.item-title span{
+.item-title span {
     text-align: right;
 }
 
 .item-description {
-    padding: 1.563vw 0px 0px 1.563vw  ;
+    width: 90%;
+    text-align: justify;
+    padding: 1.563vw 0px 0px 1.563vw;
     text-align: left;
     font-size: 1vw;
+}
+
+.weekly-small-font {
+    font-size: 1vw;
+}
+
+.weekly-sales-font {
+    font-size: 5vw;
+}
+
+
+/* --------- Media Query for Tablets --------------- */
+@media only screen and (min-width: 761px) and (max-width: 1200px) {
+    .sales-container {
+        width: 30vw;
+        height: 100%;
+        padding: 20px 0;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .weekly-sales-font {
+        font-size: 10vw;
+    }
+
+    .weekly-small-font {
+        margin-top:20px;
+        font-size: 2vw;
+    }
+
+    .item-description {
+        margin-top: 10px;
+        font-size: 1vw;
+        width: 90%;
+        text-align: justify;
+    }
+}
+
+/* --------- Media Query for large Mobiles --------------- */
+@media only screen and (min-width: 600px) and (max-width: 760px) {
+    .weekly-product-container .description {
+        font-size: 2vw;
+    }
+
+    .sales-container {
+        width: 80vw;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
+        padding: 20px;
+    }
+
+    .weekly-sales-font {
+        font-size: 15vw;
+    }
+
+    .weekly-small-font {
+        margin-top:20px;
+        font-size: 3vw;
+    }
+
+    .item-description {
+        margin-top: 20px;
+        font-size: 2vw;
+        width: 90%;
+        text-align: justify;
+    }
+}
+
+/* --------- Media Query for Mobile Devices ---------------- */
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+    .weekly-product-container .description {
+        font-size: 2vw;
+    }
+    
+    .sales-container {
+        width: 80vw;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
+        padding: 20px;
+    }
+
+    .weekly-sales-font {
+        font-size: 20vw;
+    }
+
+    .weekly-small-font {
+        margin-top:20px;
+        font-size: 5vw;
+    }
+    .item-description {
+        margin-top: 20px;
+        font-size: 4vw;
+        width: 90%;
+        text-align: justify;
+    }
 }
