--- a/css/training.css
+++ b/css/training.css
@@ -8,7 +8,7 @@
 .video-banner {
     width: 100vw;
     height: 100vh;
-    max-width:100%;
+    max-width: 100%;
     box-sizing: border-box;
     position: relative;
 }
@@ -28,5 +28,79 @@
     width: 100vw;
     height: 100vh;
     max-width: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.table-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vw;
+    margin: 2vw;
+}
+
+.training-table caption {
+    color: var(--silver-white);
+    margin: 2rem 0;
+    font-size: 1vw;
+}
+
+.training-table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    color: var(--silver-white);
+    border: 1px solid var(--light-grey);
+    padding: 1vw;
+}
+
+tr:nth-child(odd) {
+    background-color: var(--dark-grey);
+}
+
+
+tr {
+    transition: background-color 0.25s ease-in-out;
+}
+
+tr:hover {
+    background-color: var(--silver-white);
+    cursor: pointer;
+}
+
+tr:hover th {
+    color: var(--background);
+    font-weight: bold;
+}
+
+.image-container {
+    width: 100px;
+    height: 100px;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+tr:hover td,
+tr:hover td a {
+    color: var(--background);
+}
+
+.mobile-table {
+    display: none;
+}
+
+/* --------- Media Query for Mobile Devices ---------------- */
+@media only screen and (min-width: 300px) and (max-width: 600px) {
+        .table-container {
+            width: 90vw;
+            overflow-x: auto;
+        }
 }
