--- a/css/team.css
+++ b/css/team.css
@@ -20,8 +20,12 @@
 
 .team-pic {
     width: 300px;
-    height: 100%;
-    object-fit: contain;
+    height: 20rem;
+    object-fit: cover;
+}
+
+.memeber-role {
+    font-weight: 200;
 }
 
 
