--- a/css/training.css
+++ b/css/training.css
@@ -97,6 +97,11 @@ tr:hover td a {
     display: none;
 }
 
+
+.training-table caption {
+    font-size: 1.25rem;
+}
+
 /* --------- Media Query for Mobile Devices ---------------- */
 @media only screen and (min-width: 300px) and (max-width: 600px) {
         .table-container {
