--- a/css/media.css
+++ b/css/media.css
@@ -6,6 +6,14 @@
 /* importing themes */
 @import url('./theme.css');
 
+.video-banner {
+    width: 100vw;
+    height: 65vh;
+    max-width: 100%;
+    object-fit: contain;
+    margin-bottom: 20px;
+}
+
 
 .audio-container {
     width: 100%;
@@ -69,6 +77,9 @@
         font-size: 2.25rem;
     }
 
+    .video-banner {
+        height: auto;
+    }
  
 }
 
@@ -81,6 +92,9 @@
         font-size: 3rem;
     }
 
+    .video-banner {
+        height: auto;
+    }
 }
 
 /* --------- Media Query for Mobile Devices ---------------- */
@@ -100,4 +114,9 @@
     .video-gallery-content {
         height: auto;
     }
+
+    .video-banner {
+        height: auto;
+    }
+    
 }
