--- a/css/404.css
+++ b/css/404.css
@@ -1,6 +1,10 @@
 .notfound-container {
     text-align: center;
-    font-size: 10vw;
+    font-size: 5vw;
     font-family: var(--logo-font);
     color: var(--gold)
+}
+
+.text {
+    font-size: 2rem;
 }
